# Waste-an-Hour-Having-Fun

./: CMakeLists.txt  README.md  main.cpp
include/: game.hpp  player.hpp  utility.hpp
src/: game.cpp  player.cpp  utility.cpp
test/: CMakeLists.txt  GameTest.cpp
